<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SelectAmount"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="@dimen/headline"
        android:text="@string/titel"
        android:textSize="@dimen/headline"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectamount_default_pickedgrocery"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_margin="@dimen/headlinespace"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/idSelectAmountPickedGrocery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/selectamount_amount"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/idSelectAmountSelectAmount"
            android:layout_width="@dimen/inputSize"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:text="Bitte Mengenanzahl angeben..."
            android:textSize="@dimen/inputTextSize"
            android:textColor="@color/gray"/>

        <Spinner
            android:id="@+id/idSelectAmountSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

        />
            <!--android:prompt="@string/amountstring"-->
    </LinearLayout>

    <Button
        android:id="@+id/idSelectAmountAddAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectamount_accept"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="end"
        />
</LinearLayout>